modificações no index, add botões de salvar e gerar pdf. Realizado estilizações básicas para frontend com css no style

--- a/index.html
+++ b/index.html
@@ -13,59 +13,72 @@
         <div class="tabela-custos">
             <form action="">
                 <table>
-                    <caption>Custos</caption>
+                    <caption id="titulo-tabela-custos">Custos</caption>
                     <tr>
                         <td><input type="text" name="descricao" placeholder="Escreva aqui"></td>
                         <td><input type="number" name="valor" placeholder="Valor"></td>
+                        <td><button class="botao-atualizar">Atualizar</button><button class="botao-deletar">Deletar</button></td>
                     </tr>
                     <tr>
                         <td><input type="text" name="descricao" placeholder="Escreva aqui"></td>
                         <td><input type="number" name="valor" placeholder="Valor"></td>
+                        <td><button class="botao-atualizar">Atualizar</button><button class="botao-deletar">Deletar</button></td>
                     </tr>
                     <tr>
                         <td><input type="text" name="descricao" placeholder="Escreva aqui"></td>
                         <td><input type="number" name="valor" placeholder="Valor"></td>
+                        <td><button class="botao-atualizar">Atualizar</button><button class="botao-deletar">Deletar</button></td>
                     </tr>
                     <tr>
                         <td><input type="text" name="descricao" placeholder="Escreva aqui"></td>
                         <td><input type="number" name="valor" placeholder="Valor"></td>
+                        <td><button class="botao-atualizar">Atualizar</button><button class="botao-deletar">Deletar</button></td>
                     </tr>                
                     <tr>
                         <td><input type="text" name="descricao" placeholder="Escreva aqui"></td>
                         <td><input type="number" name="valor" placeholder="Valor"></td>
+                        <td><button class="botao-atualizar">Atualizar</button><button class="botao-deletar">Deletar</button></td>
                     </tr>                
                     <tr>
                         <td><input type="text" name="descricao" placeholder="Escreva aqui"></td>
                         <td><input type="number" name="valor" placeholder="Valor"></td>
+                        <td><button class="botao-atualizar">Atualizar</button><button class="botao-deletar">Deletar</button></td>
                     </tr>                
                     <tr>
                         <td><input type="text" name="descricao" placeholder="Escreva aqui"></td>
                         <td><input type="number" name="valor" placeholder="Valor"></td>
+                        <td><button class="botao-atualizar">Atualizar</button><button class="botao-deletar">Deletar</button></td>
                     </tr>                
                     <tr>
                         <td><input type="text" name="descricao" placeholder="Escreva aqui"></td>
                         <td><input type="number" name="valor" placeholder="Valor"></td>
+                        <td><button class="botao-atualizar">Atualizar</button><button class="botao-deletar">Deletar</button></td>
                     </tr>                
                     <tr>
                         <td><input type="text" name="descricao" placeholder="Escreva aqui"></td>
                         <td><input type="number" name="valor" placeholder="Valor"></td>
+                        <td><button class="botao-atualizar">Atualizar</button><button class="botao-deletar">Deletar</button></td>
                     </tr>                
                     <tr>
                         <td><input type="text" name="descricao" placeholder="Escreva aqui"></td>
                         <td><input type="number" name="valor" placeholder="Valor"></td>
+                        <td><button class="botao-atualizar">Atualizar</button><button class="botao-deletar">Deletar</button></td>
                     </tr>
                     <tr>
                         <td><input type="text" name="descricao" placeholder="Escreva aqui"></td>
                         <td><input type="number" name="valor" placeholder="Valor"></td>
+                        <td><button class="botao-atualizar">Atualizar</button><button class="botao-deletar">Deletar</button></td>
                     </tr>                
                     <tr>
                         <td><input type="text" name="descricao" placeholder="Escreva aqui"></td>
                         <td><input type="number" name="valor" placeholder="Valor"></td>
+                        <td><button class="botao-atualizar">Atualizar</button><button class="botao-deletar">Deletar</button></td>
                     </tr>
                     <tfoot>
                         <tr>
-                            <td>Total</td>
-                            <td id="total-custo"></td>
+                            <td id="total-custo-texto">Total</td>
+                            <td id="total-custo">650,33</td>
+                            <td><button id="adicionar-linha-custos">Adicionar linha</button></td>
                         </tr>  
                     </tfoot>  
                 </table>
@@ -75,36 +88,48 @@
         <div class="tabela-renda">
             <form action="">
                 <table>
-                    <caption>Renda</caption>
+                    <caption id="titulo-tabela-renda">Renda</caption>
                     <tr>
                         <td><input type="text" name="descricao" placeholder="Escreva aqui"></td>
                         <td><input type="number" name="valor" placeholder="Valor"></td>
+                        <td><button class="botao-atualizar">Atualizar</button><button class="botao-deletar">Deletar</button></td>
                     </tr>
                     <tr>
                         <td><input type="text" name="descricao" placeholder="Escreva aqui"></td>
                         <td><input type="number" name="valor" placeholder="Valor"></td>
+                        <td><button class="botao-atualizar">Atualizar</button><button class="botao-deletar">Deletar</button></td>
                     </tr>
                     <tr>
                         <td><input type="text" name="descricao" placeholder="Escreva aqui"></td>
                         <td><input type="number" name="valor" placeholder="Valor"></td>
+                        <td><button class="botao-atualizar">Atualizar</button><button class="botao-deletar">Deletar</button></td>
                     </tr>
                     <tr>
                         <td><input type="text" name="descricao" placeholder="Escreva aqui"></td>
                         <td><input type="number" name="valor" placeholder="Valor"></td>
+                        <td><button class="botao-atualizar">Atualizar</button><button class="botao-deletar">Deletar</button></td>
                     </tr>     
                     <tfoot>
                         <tr>
-                            <td>Total</td>
-                            <td id="total-renda"></td>
+                            <td id="total-renda-texto">Total</td>
+                            <td id="total-renda">8.759,55</td>
+                            <td><button id="adicionar-linha-renda">Adicionar linha</button></td>
                         </tr>  
                     </tfoot>                    
                 </table>
             </form>
         </div>
     </div>
+
     <div id="resultado">
         <p id="resultado-texto">Resultado</p>
         <p id="valor-total">R$ 368,90</p>
     </div>
+    <div class="botoes-conteiners">
+        <div id="div-salvar"><button id="button-salvar">Salvar</button></div>
+        <div id="div-gerar-pdf"><button id="button-gerar-pdf">Gerar PDF</button></div>
+    </div>
+
+    <footer id="rodape">by Bruno Machado Luna</footer>
 </body>
 </html>
