feat: gerarPDF: adicionar função para envio de dados e geração de PDF\nfix: tabela: impedir remoção de linhas ao pressionar Enter

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
         <h1 id="titulo-principal">Controle Financeiro Pessoal</h1>
         <div id="resultado">
             <p id="resultado-texto">Resultado</p>
-            <p id="valor-total">R$ 368,90</p>
+            <p id="valor-total"></p>
         </div>
         <div class="botoes-conteiners">
             <div id="div-salvar"><button id="button-salvar">Salvar</button></div>
@@ -92,7 +92,7 @@
                     <tfoot>
                         <tr id="linha-total-custos">
                             <td id="total-custo-texto">Total</td>
-                            <td id="total-custo">650,33</td>
+                            <td id="total-custo"></td>
                             <td><button id="adicionar-linha-custos">Adicionar linha</button></td>
                         </tr>
                     </tfoot>
@@ -129,7 +129,7 @@
                     <tfoot>
                         <tr id="linha-total-renda">
                             <td id="total-renda-texto">Total</td>
-                            <td id="total-renda">8.759,55</td>
+                            <td id="total-renda"></td>
                             <td><button id="adicionar-linha-renda">Adicionar linha</button></td>
                         </tr>
                     </tfoot>
