--- a/frontend/login/login.html
+++ b/frontend/login/login.html
@@ -4,17 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="stylesheet" href="./login.css">
 </head>
 <body>
-    
-    <h1>Controle Financeiro Pessoal</h1>
+    <div class="container">
+        <h1>Controle Financeiro Pessoal</h1>
 
-    <form id="form-login">
-        <input type="text" name="login" placeholder="Login" required>
-        <input type="password" name="senha" placeholder="Senha" required>
-        <button type="submit">Entrar</button>
-    </form>
+        <form id="form-login" class="form-login">
+            <input type="text" name="login" placeholder="Login" required>
+            <input type="password" name="senha" placeholder="Senha" required>
+            <button type="submit">Entrar</button>
+        </form>
 
+        <button id="btn-cadastro" class="btn-cadastro">Cadastrar</button>
+    </div>
 
 </body>
+
 </html>
