feat: modularizar codigo JavaScript, criar main.js, eventos.js, validacoes.js, tabelas.js, salvar.js, gerarPDF.js e carregarDados.js

--- a/frontend/tabelas/index.html
+++ b/frontend/tabelas/index.html
@@ -140,6 +140,6 @@
 
     
     <footer id="rodape">by Bruno Machado Luna</footer>
-    <script src="./script.js"></script>
+    <script type="module" src="./js/main.js"></script>
 </body>
 </html>
