refactor: remodular banco de dados para ter 3 tabelas, usuario, custos e renda. Adaptar os arquivos index.html, carregarDados.js, gerarPDF.js, salvar.js e tabelas.js para o novo banco de dados.

--- a/frontend/tabelas/index.html
+++ b/frontend/tabelas/index.html
@@ -28,62 +28,62 @@
                <table id="table-tabela-custos">
                     <caption id="titulo-tabela-custos">Custos</caption>
                     <tbody id="corpo-tabela-custos">
-                        <tr>
+                        <tr data-id="">
                             <td><input type="text" name="descricao" placeholder="Escreva aqui"></td>
                             <td><input type="number" name="valor" placeholder="Valor"></td>
                             <td><button class="botao-deletar">Deletar</button></td>
                         </tr>
-                        <tr>
+                        <tr data-id="">
                             <td><input type="text" name="descricao" placeholder="Escreva aqui"></td>
                             <td><input type="number" name="valor" placeholder="Valor"></td>
                             <td><button class="botao-deletar">Deletar</button></td>
                         </tr>
-                        <tr>
+                        <tr data-id="">
                             <td><input type="text" name="descricao" placeholder="Escreva aqui"></td>
                             <td><input type="number" name="valor" placeholder="Valor"></td>
                             <td><button class="botao-deletar">Deletar</button></td>
                         </tr>
-                        <tr>
+                        <tr data-id="">
                             <td><input type="text" name="descricao" placeholder="Escreva aqui"></td>
                             <td><input type="number" name="valor" placeholder="Valor"></td>
                            <td><button class="botao-deletar">Deletar</button></td>
                         </tr>
-                        <tr>
+                        <tr data-id="">
                             <td><input type="text" name="descricao" placeholder="Escreva aqui"></td>
                             <td><input type="number" name="valor" placeholder="Valor"></td>
                             <td><button class="botao-deletar">Deletar</button></td>
                         </tr>
-                        <tr>
+                        <tr data-id="">
                             <td><input type="text" name="descricao" placeholder="Escreva aqui"></td>
                             <td><input type="number" name="valor" placeholder="Valor"></td>
                            <td><button class="botao-deletar">Deletar</button></td>
                         </tr>
-                        <tr>
+                        <tr data-id="">
                             <td><input type="text" name="descricao" placeholder="Escreva aqui"></td>
                             <td><input type="number" name="valor" placeholder="Valor"></td>
                            <td><button class="botao-deletar">Deletar</button></td>
                         </tr>
-                        <tr>
+                        <tr data-id="">
                             <td><input type="text" name="descricao" placeholder="Escreva aqui"></td>
                             <td><input type="number" name="valor" placeholder="Valor"></td>
                             <td><button class="botao-deletar">Deletar</button></td>
                         </tr>
-                        <tr>
+                        <tr data-id="">
                             <td><input type="text" name="descricao" placeholder="Escreva aqui"></td>
                             <td><input type="number" name="valor" placeholder="Valor"></td>
                             <td><button class="botao-deletar">Deletar</button></td>
                         </tr>
-                        <tr>
+                        <tr data-id="">
                             <td><input type="text" name="descricao" placeholder="Escreva aqui"></td>
                             <td><input type="number" name="valor" placeholder="Valor"></td>
                             <td><button class="botao-deletar">Deletar</button></td>
                         </tr>
-                        <tr>
+                        <tr data-id="">
                             <td><input type="text" name="descricao" placeholder="Escreva aqui"></td>
                             <td><input type="number" name="valor" placeholder="Valor"></td>
                            <td><button class="botao-deletar">Deletar</button></td>
                         </tr>
-                        <tr>
+                        <tr data-id="">
                             <td><input type="text" name="descricao" placeholder="Escreva aqui"></td>
                             <td><input type="number" name="valor" placeholder="Valor"></td>
                             <td><button class="botao-deletar">Deletar</button></td>
@@ -105,22 +105,22 @@
                 <table id="table-tabela-renda">
                     <caption id="titulo-tabela-renda">Renda</caption>
                     <tbody id="corpo-tabela-renda">
-                        <tr>
+                        <tr data-id="">
                             <td><input type="text" name="descricao" placeholder="Escreva aqui"></td>
                             <td><input type="number" name="valor" placeholder="Valor"></td>
                             <td><button class="botao-deletar">Deletar</button></td>
                         </tr>
-                        <tr>
+                        <tr data-id="">
                             <td><input type="text" name="descricao" placeholder="Escreva aqui"></td>
                             <td><input type="number" name="valor" placeholder="Valor"></td>
                             <td><button class="botao-deletar">Deletar</button></td>
                         </tr>
-                        <tr>
+                        <tr data-id="">
                             <td><input type="text" name="descricao" placeholder="Escreva aqui"></td>
                             <td><input type="number" name="valor" placeholder="Valor"></td>
                             <td><button class="botao-deletar">Deletar</button></td>
                         </tr>
-                        <tr>
+                        <tr data-id="">
                             <td><input type="text" name="descricao" placeholder="Escreva aqui"></td>
                             <td><input type="number" name="valor" placeholder="Valor"></td>
                             <td><button class="botao-deletar">Deletar</button></td>
